// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Skeleton /> Circle story renders snapshot 1`] = `
<div
  aria-hidden="true"
  class="skeleton skeleton-circle skeleton--is-animating"
  style="width: 100px; height: 100px;"
/>
`;

exports[`<Skeleton /> Default story renders snapshot 1`] = `
<div
  aria-hidden="true"
  class="skeleton skeleton--is-animating"
  style="width: 100px; height: 100px;"
/>
`;

exports[`<Skeleton /> Rect story renders snapshot 1`] = `
<div
  aria-hidden="true"
  class="skeleton skeleton--is-animating"
  style="width: 50px; height: 50px;"
/>
`;

exports[`<Skeleton /> Text story renders snapshot 1`] = `
<div
  aria-hidden="true"
  class="skeleton skeleton--is-animating"
  style="width: 30ch; height: 1.5rem;"
/>
`;
